# myTool

./: .gitignore  .gitignore   CMakeLists.txt  CMakePresets.json  _00000.jsonl  config.h  config.h.in  config.json  readme.md  temp.cpp  vcpkg.json  version.rc
app/: CMakeLists.txt  aggregater.cpp  cppFlow.cpp  cppFlow2.cpp  log2.cpp  logger.cpp  logger.h  main.cpp  quillogger.h
app/utils/: buffer.h
comms/: CMakeLists.txt  comms.cpp
ftxui/: CMakeLists.txt  ftxui_main.cpp  ftxui_main.h  main.cpp
lineStore/: CMakeLists.txt  lineStore.cpp  lineStore.hpp  lineStore2.cpp  lineStore2.hpp
mac/: Info.plist
opencv/: CMakeLists.txt  cv_pahse.cpp
openserch/: readme.md
sandbox/: CMakeLists.txt  capture.cpp  move.cpp  pch.hpp  study.cpp
server/: CMakeLists.txt  http_server.cpp  http_server.hpp  pub_img.cpp  readme.md  server.cpp  watchdog.py
server2/: CMakeLists.txt  client2.cs  main.cpp  mjpeg.cpp  mjpeg.h  mpeg.cpp  mpeg.h  readme.md
server2/public/: index.html
web/: package-lock.json  package.json  vite.config.ts
web/src/: app.ts  main.ts  style.css
web/src/components/: chart_bind.ts  livePanel.ts  live_bind.ts
web/src/lib/: dom.ts
